--- a/AirportMVC1/Web.config
+++ b/AirportMVC1/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AirportMVC1-20160829073313.mdf;Initial Catalog=aspnet-AirportMVC1-20160829073313;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=PCVL\SQL2014EX;AttachDbFilename=|DataDirectory|\aspnet-AirportMVC1-20160829073313.mdf;Initial Catalog=aspnet-AirportMVC1-20160829073313;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
