--- a/AirportMVC1/AirportMVC1.csproj
+++ b/AirportMVC1/AirportMVC1.csproj
@@ -171,6 +171,8 @@
     <Compile Include="Controllers\FlightController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\PassengerController.cs" />
+    <Compile Include="Controllers\TicketController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -178,16 +180,17 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AirportContext.cs" />
     <Compile Include="Models\entity\Passenger.cs" />
-    <Compile Include="Models\entity\Terminal.cs" />
+    <Compile Include="Models\entity\Ticket.cs" />
     <Compile Include="Models\entity\Flight.cs" />
+    <Compile Include="Models\Helper.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Interfaces\IFlight.cs" />
     <Compile Include="Models\Interfaces\IPassenger.cs" />
-    <Compile Include="Models\Interfaces\ITerminal.cs" />
+    <Compile Include="Models\Interfaces\ITicket.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Repositories\FlightRepository.cs" />
     <Compile Include="Models\Repositories\PassengerRepository.cs" />
-    <Compile Include="Models\Repositories\TerminalRepository.cs" />
+    <Compile Include="Models\Repositories\TicketRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -247,12 +250,15 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Flight\Index.cshtml" />
-    <Content Include="Views\Flight\Create.cshtml" />
     <Content Include="Views\Flight\AllFlights.cshtml" />
+    <Content Include="Views\Flight\Find.cshtml" />
     <Content Include="Views\Flight\Update.cshtml" />
+    <Content Include="Views\Flight\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Passenger\" />
+    <Folder Include="Views\Ticket\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
